# hdlib

./: .bazelrc  .gitignore  BUILD  CMakeLists.txt  LICENSE  README.md
include/: algorithm.h  biggerints.h  bitset.h  bloom.h  cache.h  channel.h  circular_vector.h  counter.h  defer.h  hash.h  heap.h  jthread.h  latch.h  lifetime.h  long_adder.h  ordered_vector.h  parallel.h  property.h  scratchbuff.h  signals.h  small_vector.h  sort.h  sparse_array.h  static_vector.h  string_utils.h  string_view.h  timeit.h  trie.h
test/: BUILD  test_algorithm.cpp  test_biggerints.cpp  test_bitset.cpp  test_bloom.cpp  test_cache.cpp  test_channel.cpp  test_circular_vector.cpp  test_counter.cpp  test_defer.cpp  test_hash.cpp  test_heap.cpp  test_jthread.cpp  test_latch.cpp  test_lifetime.cpp  test_long_adder.cpp  test_ordered_vector.cpp  test_parallel.cpp  test_property.cpp  test_scratchbuff.cpp  test_signals.cpp  test_small_vector.cpp  test_sort.cpp  test_sparse_array.cpp  test_static_vector.cpp  test_string_utils.cpp  test_string_view.cpp  test_timeit.cpp  test_trie.cpp
